2009-08-12  Mark Mentovai  <mark@chromium.org>

Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=28204
        Allow C++ exceptions to be disabled in WebCore's V8 Mac build.

        * WebCorePrefix.h:
        Only undefine |try| and |catch| when building Objective-C[++],
        leaving the C++ library definitions intact for C++.

Canonical link: https://commits.webkit.org/38732@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47131 268f45cc-cd09-0410-ab3c-d52691b4dbfc